--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,57 +1,64 @@
-<h2>Burgers to eat!</h2>
 
-<ul>
-  {{#each burgers}}
-    {{#unless this.devaured}}
-      <li>
-        {{this.id}}
-        {{this.burger_name}}
+<div class="col-md-6" id="burgersToEat">
+  <h2>Burgers Wish List!</h2>
 
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="sleepy" value="true">
-          <button type="submit" id="eatButton">Eat This Burger!</button>
-        </form>
+  <ul>
+    {{#each burgers}}
+      {{#unless this.devaured}}
+        <li>
+          {{this.id}}
+          {{this.burger_name}}
 
-        {{!-- {{> burgers/delete-burger}} --}}
-      </li>
-    {{/unless}}
-  {{/each}}
-</ul>
+          <form action="/{{this.id}}?_method=PUT" method="POST">
+            <input type="hidden" name="sleepy" value="true">
+            <button type="submit" class="btn btn-xs btn-primary">Eat This Burger!</button>
+          </form>
 
-<h2>Burgers that are eaten!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if this.devaured}}
-      <li>
-        {{this.burger_name}}
-
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="sleepy" value="false">
-          {{!-- <button type="submit">Eaten!</button> --}}
-        </form>
-
-        {{!-- {{> burgers/delete-burger}} --}}
-      </li>
-    {{/if}}
-  {{/each}}
-</ul>
+          {{!-- {{> burgers/delete-burger}} --}}
+        </li>
+      {{/unless}}
+    {{/each}}
+  </ul>
+</div>
 
 
-{{!-- this code will send the data to the back end for storing --}}
-<h2>Add a Burger</h2>
-<form class="create-update-form" action="/" method="POST">
+<div class="col-md-6" id="eatenBurgers">
+  <h2 id="eatenBurgersHeader">Completed Challenge!</h2>
 
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
-  </div>
+  <ul>
+    {{#each burgers}}
+      {{#if this.devaured}}
+        <li>
+          <p id="hoverBurger">{{this.burger_name}}</p>
 
-  <div class="form-group">
-    <label for="sleepy">To Eat?</label><br>
-    <input type="radio" name="sleepy" value="0" checked> TO EAT!<br>
-    <input type="radio" name="sleepy" value="1"> Eaten!
-  </div>
+          <form action="/{{this.id}}?_method=PUT" method="POST">
+            <input type="hidden" name="sleepy" value="false">
+            {{!-- <button type="submit">Eaten!</button> --}}
+          </form>
 
-  <button type="submit">Add Burger</button>
-</form>
+          {{!-- {{> burgers/delete-burger}} --}}
+        </li>
+      {{/if}}
+    {{/each}}
+  </ul>
+</div>
+
+<div class="addBurgerDiv">
+    {{!-- this code will send the data to the back end for storing --}}
+    <h2>Add a Burger To Your Wish List</h2>
+    <form class="create-update-form" action="/" method="POST">
+
+      <div class="form-group">
+        <label for="ca">Burger Name:</label>
+        <input type="text" id="ca" name="name">
+      </div>
+
+      <div class="form-group">
+        <label for="sleepy">To Eat?</label><br>
+        <input type="radio" name="sleepy" value="0" checked> TO EAT!<br>
+        <input type="radio" name="sleepy" value="1"> Tasted Already!
+      </div>
+
+      <button type="submit" class="btn btn-sm btn-warning">Add Burger</button>
+    </form>
+</div>
