--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,16 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/reset.css" type="text/css"/>
+		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css"/>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<title>Eat tha Burger!</title>
 	</head>
+
+	
 	<body>
+
+
 		<div class="container">
-			<div class="jumbotron">
-				{{{ body }}}
+			<h1 id="welcomeHeader">Welcome to your Burgers Checklist</h1>
+
+			<div class="row">
+				<div class="jumbotron">
+					{{{ body }}}
+				</div>
 			</div>
 		</div>
 	</body>
