--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,21 +1,12 @@
 
 .jumbotron {
 	background-image: url("../img/burger.jpg");
-  /*background-repeat: no-repeat;*/
-  /*background-position: right top;*/
-  /*height: 150px;*/
 }
 
 #eatenBurgers {
-  /*background-image: url("../img/eatenBurger.jpg");*/
-  /*background-position: left;*/
   padding-left: 20px;
   opacity: 0.7;
-  font-size: 20px;
-  color: white;
-
-  /*color: gray;*/
-  /*background: white;*/
+  color: #eeeeee;
 }
 
 #eatenBurgersHeader {
@@ -23,22 +14,22 @@
 }
 
 #welcomeHeader {
-  position: center;
+  text-align: center;
 }
 
 
 #hoverBurger:hover{
-  color: blue;
+  color: black;
+  text-shadow:5px 5px 10px black;
 }
-/*.addBurgerDiv {
-  margin-top: 50px;*/
-  /*background: blue;*/
-/*}*/
+
+#glyph {
+  font-size: 10px;
+}
 
 li {
   padding: 5px;
   margin: 5px;
-  /*background: #faebd7;*/
 }
 
 .label {
@@ -48,7 +39,6 @@ li {
 .create-update-form {
   padding: 5px;
   margin: 5px;
-  /*background: aqua;*/
 }
 
 .form-group {
