--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
     {{#each burgers}}
       {{#unless this.devaured}}
         <li>
-          {{this.id}}
+          {{this.id}}.
           {{this.burger_name}}
 
           <form action="/{{this.id}}?_method=PUT" method="POST">
@@ -14,12 +14,12 @@
             <button type="submit" class="btn btn-xs btn-primary">Eat This Burger!</button>
           </form>
 
-          {{!-- {{> burgers/delete-burger}} --}}
         </li>
       {{/unless}}
     {{/each}}
   </ul>
 </div>
+
 
 
 <div class="col-md-6" id="eatenBurgers">
@@ -29,14 +29,12 @@
     {{#each burgers}}
       {{#if this.devaured}}
         <li>
-          <p id="hoverBurger">{{this.burger_name}}</p>
+          <p id="hoverBurger"><span class="glyphicon glyphicon-menu-right" id="glyph"></span> {{this.burger_name}}</p>
 
-          <form action="/{{this.id}}?_method=PUT" method="POST">
+{{!--           <form action="/{{this.id}}?_method=PUT" method="POST">
             <input type="hidden" name="sleepy" value="false">
-            {{!-- <button type="submit">Eaten!</button> --}}
-          </form>
+          </form> --}}
 
-          {{!-- {{> burgers/delete-burger}} --}}
         </li>
       {{/if}}
     {{/each}}
@@ -54,7 +52,7 @@
       </div>
 
       <div class="form-group">
-        <label for="sleepy">To Eat?</label><br>
+        <label for="sleepy"></label><br>
         <input type="radio" name="sleepy" value="0" checked> TO EAT!<br>
         <input type="radio" name="sleepy" value="1"> Tasted Already!
       </div>
