--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,62 +1,77 @@
+  <div class="container">
 
-<div class="col-md-6" id="burgersToEat">
-  <h2>Burgers Wish List!</h2>
+    <h1 id="welcomeHeader">Welcome to your Burgers Checklist</h1>
 
-  <ul>
-    {{#each burgers}}
-      {{#unless this.devaured}}
-        <li>
-          {{this.id}}.
-          {{this.burger_name}}
+    <div class="row">
+        <div class="col-md-6" id="burgersToEat">
+          <h2>Burgers Wish List!</h2>
 
-          <form action="/{{this.id}}?_method=PUT" method="POST">
-            <input type="hidden" name="sleepy" value="true">
-            <button type="submit" class="btn btn-xs btn-primary">Eat This Burger!</button>
-          </form>
+          <ul>
+            {{#each burgers}}
 
-        </li>
-      {{/unless}}
-    {{/each}}
-  </ul>
-</div>
+              {{#unless this.devaured}}
 
+                <li>
+                  {{this.id}}.
+                  {{this.burger_name}}
 
+                    <form action="/{{this.id}}?_method=PUT" method="POST">
+                      <input type="hidden" name="sleepy" value="true">
+                      <button type="submit" class="btn btn-xs btn-primary">Eat This Burger!</button>
+                    </form>
+                </li>
 
-<div class="col-md-6" id="eatenBurgers">
-  <h2 id="eatenBurgersHeader">Completed Challenge!</h2>
+              {{/unless}}
 
-  <ul>
-    {{#each burgers}}
-      {{#if this.devaured}}
-        <li>
-          <p id="hoverBurger"><span class="glyphicon glyphicon-menu-right" id="glyph"></span> {{this.burger_name}}</p>
+            {{/each}}
 
-{{!--           <form action="/{{this.id}}?_method=PUT" method="POST">
-            <input type="hidden" name="sleepy" value="false">
-          </form> --}}
+          </ul>
+        </div>
 
-        </li>
-      {{/if}}
-    {{/each}}
-  </ul>
-</div>
+      <div class="col-md-6" id="eatenBurgers">
+        <h2 id="eatenBurgersHeader">Completed Challenge!</h2>
 
-<div class="addBurgerDiv">
-    {{!-- this code will send the data to the back end for storing --}}
-    <h2>Add a Burger To Your Wish List</h2>
-    <form class="create-update-form" action="/" method="POST">
+        <ul>
+          {{#each burgers}}
 
-      <div class="form-group">
-        <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" name="name">
+            {{#if this.devaured}}
+
+              <li>
+                <p id="hoverBurger"><span class="glyphicon glyphicon-menu-right" id="glyph"></span> {{this.burger_name}}</p>
+              </li>
+
+            {{/if}}
+
+          {{/each}}
+        </ul>
       </div>
+    </div>
+  </div>
 
-      <div class="form-group">
-        <label for="sleepy"></label><br>
-        <input type="radio" name="sleepy" value="0" checked> TO EAT!<br>
-        <input type="radio" name="sleepy" value="1"> Tasted Already!
-      </div>
 
-      <button type="submit" class="btn btn-sm btn-warning">Add Burger</button>
-    </form>
-</div>
+
+  <div class="container">
+
+    <div class="row">
+        <div class="addBurgerDiv" class="col-md-12">
+            {{!-- this code will send the data to the back end for storing --}}
+            <h2 id="addBurgerHeader">Add a Burger To Your Wish List</h2>
+            <form class="create-update-form" action="/" method="POST">
+
+              <div class="form-group">
+                <label for="ca">Burger Name:</label>
+                <input type="text" id="ca" name="name">
+              </div>
+
+              <div class="form-group">
+                <label for="sleepy"></label><br>
+                <input type="radio" name="sleepy" value="0" checked> TO EAT!<br>
+                <input type="radio" name="sleepy" value="1"> Tasted Already!
+              </div>
+
+              <button type="submit" class="btn btn-sm btn-warning">Add Burger</button>
+            </form>
+        </div>
+    </div>
+
+  </div>
